// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Checkbox allVue demo works fine 1`] = `
<div>
  <div
    class="t-checkbox-group"
  >
    <span>
      
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            全选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息
          </div>
        </div>
        <div
          class="t-checkbox__border t-checkbox__border--left"
        />
      </div>
      
    </span>
  </div>
</div>
`;

exports[`Checkbox > Checkbox baseVue demo works fine 1`] = `
<div
  class="t-checkbox-group"
>
  <span>
    
    <div
      class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
    >
      <div
        class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-checkbox__content"
      >
        <div
          class="t-checkbox__title t-checkbox__title--checked"
        >
          多选
        </div>
        <div
          class="t-checkbox__description"
        >
          <!---->
        </div>
      </div>
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
    >
      <div
        class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-checkbox__content"
      >
        <div
          class="t-checkbox__title t-checkbox__title--checked"
        >
          多选
        </div>
        <div
          class="t-checkbox__description"
        >
          <!---->
        </div>
      </div>
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-checkbox--left t-checkbox--block"
    >
      <div
        class="t-checkbox__icon t-checkbox__icon--left"
      >
        
        <div
          class="t-checkbox__icon-circle"
        />
        <!---->
        
      </div>
      <div
        class="t-checkbox__content"
      >
        <div
          class="t-checkbox__title"
        >
          多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行
        </div>
        <div
          class="t-checkbox__description"
        >
          <!---->
        </div>
      </div>
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    <div
      class="t-checkbox t-checkbox--left t-checkbox--block"
    >
      <div
        class="t-checkbox__icon t-checkbox__icon--left"
      >
        
        <div
          class="t-checkbox__icon-circle"
        />
        <!---->
        
      </div>
      <div
        class="t-checkbox__content"
      >
        <div
          class="t-checkbox__title"
        >
          多选
        </div>
        <div
          class="t-checkbox__description"
        >
          描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
        </div>
      </div>
      <div
        class="t-checkbox__border t-checkbox__border--left"
      />
    </div>
    
  </span>
</div>
`;

exports[`Checkbox > Checkbox cardVue demo works fine 1`] = `
<div
  class="t-checkbox-group theme-card"
  data-v-4404dc4f=""
>
  
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
    data-v-4404dc4f=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
    data-v-4404dc4f=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-checkbox--left t-checkbox--block"
    data-v-4404dc4f=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left"
    >
      
      <div
        class="t-checkbox__icon-circle"
      />
      <!---->
      
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title"
      >
        多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行多选标题
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  
</div>
`;

exports[`Checkbox > Checkbox horizontalVue demo works fine 1`] = `
<div
  class="t-checkbox-group box"
  data-v-86c4f40b=""
>
  
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked"
    data-v-86c4f40b=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选标题
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked"
    data-v-86c4f40b=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选标题
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-checkbox t-checkbox--left"
    data-v-86c4f40b=""
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left"
    >
      
      <div
        class="t-checkbox__icon-circle"
      />
      <!---->
      
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title"
      >
        上限四字
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Checkbox > Checkbox mobileVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-mobile-demo"
  >
    <h1
      class="title"
    >
      Checkbox 多选框
    </h1>
    <p
      class="summary"
    >
      用于预设的一组选项中执行多项选择，并呈现选择结果。
    </p>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          01 组件类型
        </h2>
        <p
          class="tdesign-mobile-demo-block__summary"
        >
          纵向多选框
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        <div
          class="t-checkbox-group"
        >
          <span>
            
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--block"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left"
              >
                
                <div
                  class="t-checkbox__icon-circle"
                />
                <!---->
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--block"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left"
              >
                
                <div
                  class="t-checkbox__icon-circle"
                />
                <!---->
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
                </div>
              </div>
              <div
                class="t-checkbox__border t-checkbox__border--left"
              />
            </div>
            
          </span>
        </div>
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <!--v-if-->
        <p
          class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
        >
          横向多选框
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        <div
          class="t-checkbox-group box"
          data-v-86c4f40b=""
        >
          
          <div
            class="t-checkbox t-checkbox--left t-checkbox--checked"
            data-v-86c4f40b=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--checked"
              >
                多选标题
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            class="t-checkbox t-checkbox--left t-checkbox--checked"
            data-v-86c4f40b=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--checked"
              >
                多选标题
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            class="t-checkbox t-checkbox--left"
            data-v-86c4f40b=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left"
            >
              
              <div
                class="t-checkbox__icon-circle"
              />
              <!---->
              
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title"
              >
                上限四字
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <!--v-if-->
        <p
          class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
        >
          带全选多选框
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        <div>
          <div
            class="t-checkbox-group"
          >
            <span>
              
              <div
                class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              >
                <div
                  class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
                >
                  <svg
                    class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="t-checkbox__content"
                >
                  <div
                    class="t-checkbox__title t-checkbox__title--checked"
                  >
                    全选
                  </div>
                  <div
                    class="t-checkbox__description"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="t-checkbox__border t-checkbox__border--left"
                />
              </div>
              <div
                class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              >
                <div
                  class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
                >
                  <svg
                    class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="t-checkbox__content"
                >
                  <div
                    class="t-checkbox__title t-checkbox__title--checked"
                  >
                    多选
                  </div>
                  <div
                    class="t-checkbox__description"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="t-checkbox__border t-checkbox__border--left"
                />
              </div>
              <div
                class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              >
                <div
                  class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
                >
                  <svg
                    class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="t-checkbox__content"
                >
                  <div
                    class="t-checkbox__title t-checkbox__title--checked"
                  >
                    多选
                  </div>
                  <div
                    class="t-checkbox__description"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="t-checkbox__border t-checkbox__border--left"
                />
              </div>
              <div
                class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              >
                <div
                  class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
                >
                  <svg
                    class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="t-checkbox__content"
                >
                  <div
                    class="t-checkbox__title t-checkbox__title--checked"
                  >
                    多选
                  </div>
                  <div
                    class="t-checkbox__description"
                  >
                    单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息单选描述信息
                  </div>
                </div>
                <div
                  class="t-checkbox__border t-checkbox__border--left"
                />
              </div>
              
            </span>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          02 组件状态
        </h2>
        <p
          class="tdesign-mobile-demo-block__summary"
        >
          多选框状态
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        <div
          class="t-checkbox-group"
        >
          
          <div
            class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked t-checkbox__icon--disabled"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--checked t-checkbox__title--disabled"
              >
                选项禁用-已选
              </div>
              <div
                class="t-checkbox__description t-checkbox__description--disabled"
              >
                <!---->
              </div>
            </div>
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-checkbox--left t-checkbox--block"
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--disabled"
            >
              
              <div
                class="t-checkbox__icon-circle t-checkbox__icon-circle--disabled"
              />
              <!---->
              
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--disabled"
              >
                选项禁用-默认
              </div>
              <div
                class="t-checkbox__description t-checkbox__description--disabled"
              >
                <!---->
              </div>
            </div>
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          
        </div>
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          03 组件样式
        </h2>
        <p
          class="tdesign-mobile-demo-block__summary"
        >
          勾选样式
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        
        <div
          class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        >
          <div
            class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
          >
            <svg
              class="t-icon t-icon-check t-checkbox__icon-wrapper"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="check"
              >
                <path
                  d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-checkbox__content"
          >
            <div
              class="t-checkbox__title t-checkbox__title--checked"
            >
              多选
            </div>
            <div
              class="t-checkbox__description"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <div
          style="height: 16px;"
        />
        <div
          class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        >
          <div
            class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-rectangle-filled t-checkbox__icon-wrapper"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M22 2H2V22H22V2ZM6.08618 12L7.5004 10.5858L10.5004 13.5858L16.5004 7.58579L17.9146 9L10.5004 16.4142L6.08618 12Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-checkbox__content"
          >
            <div
              class="t-checkbox__title t-checkbox__title--checked"
            >
              多选
            </div>
            <div
              class="t-checkbox__description"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <div
          style="height: 16px;"
        />
        <div
          class="t-checkbox t-checkbox--left t-checkbox--block"
        >
          <div
            class="t-checkbox__icon t-checkbox__icon--left"
          >
            <img
              class="t-checkbox__icon-image t-checkbox__icon-wrapper"
              src="https://tdesign.gtimg.com/mobile/demos/checkbox.png"
            />
          </div>
          <div
            class="t-checkbox__content"
          >
            <div
              class="t-checkbox__title"
            >
              图片图标
            </div>
            <div
              class="t-checkbox__description"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <!--v-if-->
        <p
          class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
        >
          勾选显示位置
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        
        <div
          class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        >
          <div
            class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-checkbox__content"
          >
            <div
              class="t-checkbox__title t-checkbox__title--checked"
            >
              多选
            </div>
            <div
              class="t-checkbox__description"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-checkbox__border t-checkbox__border--left"
          />
        </div>
        <view
          class="box"
          style="height: 16px;"
        />
        <div
          class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block"
        >
          <div
            class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-checkbox__content"
          >
            <div
              class="t-checkbox__title t-checkbox__title--checked"
            >
              多选
            </div>
            <div
              class="t-checkbox__description"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-checkbox__border t-checkbox__border--right"
          />
        </div>
        
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <!--v-if-->
        <p
          class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
        >
          非通栏多选样式
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        <div
          class="t-checkbox-group theme-card"
          data-v-4404dc4f=""
        >
          
          <div
            class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
            data-v-4404dc4f=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--checked"
              >
                多选
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
            data-v-4404dc4f=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title t-checkbox__title--checked"
              >
                多选
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          <div
            class="t-checkbox t-checkbox--left t-checkbox--block"
            data-v-4404dc4f=""
          >
            <div
              class="t-checkbox__icon t-checkbox__icon--left"
            >
              
              <div
                class="t-checkbox__icon-circle"
              />
              <!---->
              
            </div>
            <div
              class="t-checkbox__content"
            >
              <div
                class="t-checkbox__title"
              >
                多选标题多行多选标题多行多选标题多行多选标题多行多选标题多行多选标题
              </div>
              <div
                class="t-checkbox__description"
              >
                <!---->
              </div>
            </div>
            <div
              class="t-checkbox__border t-checkbox__border--left"
            />
          </div>
          
        </div>
        
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <div
        class="tdesign-mobile-demo-block__header"
      >
        <h2
          class="tdesign-mobile-demo-block__title"
        >
          04 特殊样式
        </h2>
        <p
          class="tdesign-mobile-demo-block__summary"
        >
          纵向卡片多选框
        </p>
      </div>
      <div
        class="tdesign-mobile-demo-block__slot"
      >
        
        
        <div
          class="t-checkbox-group"
          data-v-0aacc3fb=""
        >
          
          
          <div
            class="card card--active"
            data-v-0aacc3fb=""
          >
            <svg
              aria-hidden="true"
              class="t-icon t-icon-check card__icon"
              data-v-0aacc3fb=""
            >
              <use
                href="#t-icon-check"
              />
            </svg>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <!---->
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  描述信息描述信息描述信息描述信息描述信息
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div
            class="card card--active"
            data-v-0aacc3fb=""
          >
            <svg
              aria-hidden="true"
              class="t-icon t-icon-check card__icon"
              data-v-0aacc3fb=""
            >
              <use
                href="#t-icon-check"
              />
            </svg>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <!---->
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  描述信息描述信息描述信息描述信息描述信息
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div
            class="card -1"
            data-v-0aacc3fb=""
          >
            <!--v-if-->
            <div
              class="t-checkbox t-checkbox--left t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left"
              >
                
                <!---->
                <!---->
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  描述信息描述信息描述信息描述信息描述信息
                </div>
              </div>
              <!---->
            </div>
          </div>
          
          
        </div>
        <div
          class="tdesign-mobile-demo-block__summary"
          data-v-0aacc3fb=""
          style="margin-left: 16px; margin-top: 24px;"
        >
          横向卡片多选框
        </div>
        <div
          class="t-checkbox-group horizontal-box"
          data-v-0aacc3fb=""
        >
          
          
          <div
            class="card card--active"
            data-v-0aacc3fb=""
          >
            <svg
              aria-hidden="true"
              class="t-icon t-icon-check card__icon"
              data-v-0aacc3fb=""
            >
              <use
                href="#t-icon-check"
              />
            </svg>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <!---->
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div
            class="card card--active"
            data-v-0aacc3fb=""
          >
            <svg
              aria-hidden="true"
              class="t-icon t-icon-check card__icon"
              data-v-0aacc3fb=""
            >
              <use
                href="#t-icon-check"
              />
            </svg>
            <div
              class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
              >
                <!---->
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
          </div>
          <div
            class="card -1"
            data-v-0aacc3fb=""
          >
            <!--v-if-->
            <div
              class="t-checkbox t-checkbox--left t-checkbox--block"
              data-v-0aacc3fb=""
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--left"
              >
                
                <!---->
                <!---->
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  多选
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
          </div>
          
          
        </div>
        
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox > Checkbox rightVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <view
    class="box"
    style="height: 16px;"
  />
  <div
    class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--right"
    />
  </div>
  
</div>
`;

exports[`Checkbox > Checkbox specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-checkbox-group"
    data-v-0aacc3fb=""
  >
    
    
    <div
      class="card card--active"
      data-v-0aacc3fb=""
    >
      <svg
        aria-hidden="true"
        class="t-icon t-icon-check card__icon"
        data-v-0aacc3fb=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <!---->
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </div>
    <div
      class="card card--active"
      data-v-0aacc3fb=""
    >
      <svg
        aria-hidden="true"
        class="t-icon t-icon-check card__icon"
        data-v-0aacc3fb=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <!---->
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </div>
    <div
      class="card -1"
      data-v-0aacc3fb=""
    >
      <!--v-if-->
      <div
        class="t-checkbox t-checkbox--left t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left"
        >
          
          <!---->
          <!---->
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block__summary"
    data-v-0aacc3fb=""
    style="margin-left: 16px; margin-top: 24px;"
  >
    横向卡片多选框
  </div>
  <div
    class="t-checkbox-group horizontal-box"
    data-v-0aacc3fb=""
  >
    
    
    <div
      class="card card--active"
      data-v-0aacc3fb=""
    >
      <svg
        aria-hidden="true"
        class="t-icon t-icon-check card__icon"
        data-v-0aacc3fb=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <!---->
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <div
      class="card card--active"
      data-v-0aacc3fb=""
    >
      <svg
        aria-hidden="true"
        class="t-icon t-icon-check card__icon"
        data-v-0aacc3fb=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
        >
          <!---->
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    <div
      class="card -1"
      data-v-0aacc3fb=""
    >
      <!--v-if-->
      <div
        class="t-checkbox t-checkbox--left t-checkbox--block"
        data-v-0aacc3fb=""
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--left"
        >
          
          <!---->
          <!---->
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            多选
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
    </div>
    
    
  </div>
  
</div>
`;

exports[`Checkbox > Checkbox statusVue demo works fine 1`] = `
<div
  class="t-checkbox-group"
>
  
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked t-checkbox__icon--disabled"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked t-checkbox__title--disabled"
      >
        选项禁用-已选
      </div>
      <div
        class="t-checkbox__description t-checkbox__description--disabled"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    class="t-checkbox t-checkbox--left t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--disabled"
    >
      
      <div
        class="t-checkbox__icon-circle t-checkbox__icon-circle--disabled"
      />
      <!---->
      
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--disabled"
      >
        选项禁用-默认
      </div>
      <div
        class="t-checkbox__description t-checkbox__description--disabled"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  
</div>
`;

exports[`Checkbox > Checkbox typeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="check"
        >
          <path
            d="M19.5708 7.37842L10.3785 16.5708L5.42871 11.6211"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    style="height: 16px;"
  />
  <div
    class="t-checkbox t-checkbox--left t-checkbox--checked t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left t-checkbox__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-rectangle-filled t-checkbox__icon-wrapper"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M22 2H2V22H22V2ZM6.08618 12L7.5004 10.5858L10.5004 13.5858L16.5004 7.58579L17.9146 9L10.5004 16.4142L6.08618 12Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title t-checkbox__title--checked"
      >
        多选
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  <div
    style="height: 16px;"
  />
  <div
    class="t-checkbox t-checkbox--left t-checkbox--block"
  >
    <div
      class="t-checkbox__icon t-checkbox__icon--left"
    >
      <img
        class="t-checkbox__icon-image t-checkbox__icon-wrapper"
        src="https://tdesign.gtimg.com/mobile/demos/checkbox.png"
      />
    </div>
    <div
      class="t-checkbox__content"
    >
      <div
        class="t-checkbox__title"
      >
        图片图标
      </div>
      <div
        class="t-checkbox__description"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-checkbox__border t-checkbox__border--left"
    />
  </div>
  
</div>
`;
